Release 0.52.3
- Video cards output - vsync-like bug fixed.

Release 0.52.2
- Color Correction crashing BV fixed

Release 0.52.1
- Stopping on timeline keframe fixed

Release 0.52.0
- Colorize effects (color correction, color balance, sepia) added

Release 0.51.0
- Follow logic changes
    - Enable/disable following along chosen axis.
    - Parameters for choosing point on BB which is aligned to target node.
    - Logic can align to recursive BB of node.
- Sequence loader sends progress events during animation loading.
- Changes in config - referenceV, referenceH and referenceMode are set once per video card.
- Video Cards - Setting H and V phase and synchronization signal reference mode. Quering these informations through API (+IsLocked command).
- Audio input delay relative to video fixed.
- Invalid config (not parsing xml) doesn't crash engine on startup.
- Send audio to preview only for render channels are displayed on preview.
- Audio artifacts after enabling video input fixed.
- Problem with silent VideoInputPlugin audio on preview fixed.

Release 0.50.0
- Rendering to shared memory enabled.
- ffmpeg library recompiled.
- Added SD resolution for Blufish video card.
- Saving config.
- Many small changes in config entries. Test and example configs updated.
- Added UIDs for nodes.
- Video input audio works.
- Changes in timelines keyframes.