@@ -1,5 +1,6 @@
 Release 0.52.3
 - Video cards output - vsync-like bug fixed.
+- DefaultAVDecoderPlugin - loop enabled makes infinite loop, when loop count is set to zero [Bug fix].
 
 Release 0.52.2
 - Color Correction crashing BV fixed
